eng/kubernetes/band-account-manager.Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: band-account-manager
  namespace: laurelschooldistrict
  annotations:
    github-actions/job-id: "#{RUN_ID}#"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: band-account-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: band-account-manager
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: band-account-manager
          image: "ghcr.io/laurelschooldistrict/band-account-manager:#{VERSION}#"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
